# instasplatter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  RELEASE.md  ROADMAP-V2.md  ROADMAP.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: E2E-GEO-V010.md  E2E-VERIFICATION.md  PAPER-SWEEP-2024+.md  RESEARCH-STACK.md  SMOKE-TEST.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: colmap.rs  engines.rs  lib.rs  main.rs  math.rs  profiler.rs  project.rs  queue.rs  settings.rs
src-tauri/src/geospatial/: catalog.rs  data.rs  dem.rs  events.rs  exports.rs  hydro.rs  hydro_adapters.rs  mod.rs  preview.rs  registration.rs  transforms.rs
src-tauri/src/geospatial/registration/: ingest.rs  mod.rs
src-tauri/src/mesh/: export.rs  mod.rs  raster.rs  tsdf.rs
src-tauri/src/pipeline/: brush.rs  colmap.rs  dense.rs  experimental.rs  gating.rs  gsplat.rs  ingest.rs  mod.rs  preview.rs  sidecars.rs  solver.rs
src-tauri/src/sfm/: ba.rs  features.rs  geometry.rs  matcher.rs  mod.rs
src-tauri/src/splat/: export.rs  mipfilter.rs  mod.rs  ply.rs  schematic.rs  transform.rs
src/components/: BatchQueue.tsx  DropZone.tsx  Preferences.tsx  Processing.tsx  Viewport.tsx
src/geospatial/: GeoHome.tsx  aoi.ts  (+14 more)
tools/: HW-MATRIX.md  smoke-local.ps1  upgrade_experimental_adapters.py
(+166 files in other folders)
