[package]
name = "instasplatter"
version = "0.8.1"
description = "Drag-and-drop live Gaussian Splat reconstruction"
authors = ["Eric Ayers"]
edition = "2021"

[lib]
name = "instasplatter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff"] }
sysinfo = "0.33"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
sha2 = "0.10"
futures-util = "0.3"
rayon = "1"
log = "0.4"
env_logger = "0.11"
zstd = "0.13"
kamadak-exif = "0.6"

[profile.release]
lto = true
codegen-units = 1
